--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,16 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+   - assets/chris.jpg
+   - assets/dressers.png
+   - assets/wardrobe.png
+   - assets/sofas.png
+   - assets/sofad.png
+   - assets/desks.png
+   - assets/ottoman.jpg
+   - assets/chair.jpg
+   - assets/anotherchair.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
